River surface and trench improvements